--- a/src/components/Dropdown/Dropdown.css
+++ b/src/components/Dropdown/Dropdown.css
@@ -5,20 +5,26 @@
   list-style: none;
   text-align: start;
   z-index: 10; /* Ensure dropdown stays above normal content */
+  border-radius: 8px;
+  
 }
 
 .services-submenu.clicked {
   display: none;
   z-index: 20; /* Higher z-index when clicked to ensure it appears above content */
+  
 }
 
 .services-submenu li {
   background: rgb(0, 212, 212);
   cursor: pointer;
+  border-radius: 8px;
+  
 }
 
 .services-submenu li a:hover {
   background: rgb(0, 175, 175);
+  
 }
 
 .submenu-item {
@@ -28,9 +34,11 @@
   text-decoration: none;
   color: white;
   padding: 16px;
+  
 }
 
 /* Optional: If you want to adjust the Drawer z-index */
 .ant-drawer {
   z-index: 1050 !important; /* Ensure drawer doesn't hide dropdown */
+  
 }
